--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <title>my pinterest profile (for embedding)</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="floppy.gif">
 </head>
 <body>
     <a data-pin-do="embedUser" data-pin-board-width="400" data-pin-scale-height="240" data-pin-scale-width="80" href="https://www.pinterest.com/owenlaney/"></a>
